--- a/src/app/components/create-todo/create-todo.component.html
+++ b/src/app/components/create-todo/create-todo.component.html
@@ -1,4 +1,4 @@
 <form id="form">
   <input type="text" name="tf_2do" id="tf_2do" autocomplete="off" />
-  <button type="submit">Salvar</button>
+  <button type="button">Salvar</button>
 </form>
