--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,4 +1,3 @@
-<app-create-todo></app-create-todo>
 <table id="table">
   <tr *ngFor="let todo of todos">
     <td>
@@ -6,7 +5,7 @@
     </td>
     <td class="text">{{ todo.text }}</td>
     <td>
-      <button>X</button>
+      <button (click)="deleteTodo(todo)">X</button>
     </td>
   </tr>
 </table>
