checkboxes and text line-through working

--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -1,7 +1,6 @@
-.form {
-  border: 2px solid black;
+.checkbox {
 }
 
-.table {
-  border: 2px solid black;
+.done {
+  text-decoration: line-through;
 }
