added the create new todo feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>TodoList with Angular</h1>
-<app-create-todo></app-create-todo>
-<app-todos></app-todos>
+<main>
+  <app-create-todo></app-create-todo>
+  <app-todos></app-todos>
+</main>
