--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -4,3 +4,57 @@
 .done {
   text-decoration: line-through;
 }
+
+table {
+  width: 100%;
+  border-spacing: 0;
+}
+
+td {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 10px 10px 10px 0;
+}
+
+tr:hover td {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+select * {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 16px;
+}
+
+/* td:nth-child(1) {
+  width: 24px;
+}
+
+td:nth-child(2) {
+  cursor: default;
+}
+
+td:nth-child(3) {
+  width: 72px;
+  font-size: 12px;
+  text-align: center;
+}
+
+td:nth-child(4) {
+  width: 36px;
+} */
+
+table input[type="checkbox"] {
+  cursor: pointer;
+}
+
+table i {
+  cursor: pointer;
+  opacity: 0.8;
+  font-size: 35px;
+}
+
+table i:hover {
+  opacity: 1;
+  color: #e97373;
+}
