--- a/src/app/components/create-todo/create-todo.component.html
+++ b/src/app/components/create-todo/create-todo.component.html
@@ -1,4 +1,13 @@
 <form id="form">
-  <input type="text" name="tf_2do" id="tf_2do" autocomplete="off" />
-  <button type="button">Salvar</button>
+  <input
+    (change)="setNewTodoName($event)"
+    [value]="newTodoName"
+    type="text"
+    name="tf_2do"
+    id="tf_2do"
+    autocomplete="off"
+  />
+  <button (click)="createNewTodo()" class="material-icons" type="button">
+    save
+  </button>
 </form>
