--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 * {
   box-sizing: border-box;
 }
@@ -18,6 +18,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+h1 {
+  text-align: center;
+}
+
 a,
 a:visited {
   color: yellowgreen;
@@ -26,75 +30,14 @@ a:visited {
 main {
   background-color: #9c4dcc;
   padding: 20px;
-  width: 400px;
+  width: 500px;
 }
 
-form {
-  display: flex;
-  margin-bottom: 10px;
+html,
+body {
+  height: 100%;
 }
-
-form input {
-  display: block;
-  width: calc(100% - 100px);
-  font-size: 1rem;
-  padding: 5px;
-  align-items: stretch;
-}
-
-form button {
-  width: 100px;
-  display: block;
-  font-size: 0.7rem;
-  border: none;
-}
-
-table {
-  width: 100%;
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-td {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 10px 0;
-}
-
-tr:hover td {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-td:nth-child(1) {
-  width: 24px;
-}
-
-td:nth-child(3) {
-  width: 72px;
-  font-size: 12px;
-  text-align: center;
-}
-
-td:nth-child(2) {
-  cursor: default;
-}
-
-td:nth-child(4) {
-  width: 36px;
-}
-
-tr.done td:nth-child(2) {
-  text-decoration: line-through;
-}
-
-table input[type="checkbox"] {
-  cursor: pointer;
-}
-
-table i {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-table i:hover {
-  opacity: 1;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
