--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -19,6 +19,11 @@ tr:hover td {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+tr .text {
+  width: 90%;
+  text-align: center;
+}
+
 select * {
   margin: 0;
   padding: 0;
