fixed empty imput and added prevent page reload on enter key press

--- a/src/app/components/create-todo/create-todo.component.html
+++ b/src/app/components/create-todo/create-todo.component.html
@@ -1,6 +1,7 @@
 <form id="form">
   <input
     (change)="setNewTodoName($event)"
+    (keydown.enter)="$event.preventDefault()"
     [value]="newTodoName"
     type="text"
     name="tf_2do"
